kubernetes/media/sonarr/10-ingress-sonarr.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.khazadlab.es`)
      kind: Rule
      middlewares:
        - name: default-headers-media   
          namespace: media              
      services:
        - name: sonarr
          port: 80
  tls:
    secretName: tls-khazadlab-wildcard
